--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.30)
 project(ModularCpp)
-include_directories(utils)
+include_directories(logger)
 set(CMAKE_CXX_STANDARD 20)
 add_executable(ModularCpp main.cpp
-        utils/logger.h)
+        logger/logger.h)
