--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.30)
 project(cpp-logger)
-include_directories(logger)
+# include_directories(logger)
 set(CMAKE_CXX_STANDARD 20)
 add_executable(cpplogger main.cpp
-        logger/logger.h
-        logger/manager.h)
+        logger.h
+        manager.h)
