--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
-project(cpp-logger)
+project(cpp-logger VERSION 0.1.0 LANGUAGES C CXX)
 # include_directories(logger)
 set(CMAKE_CXX_STANDARD 20)
 add_executable(cpplogger main.cpp
